[tool.poetry]
name = "xlutil"
version = "0.1.3"
description = "Excel utilities for easier workflow when dealing with dataframes and excel files"
authors = ["Santo K Thomas <santokalayil@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/santokalayil/xlutil"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pydantic = "^2.6.1"
xlsxwriter = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.1"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
